# Rei

./: Cargo.toml  README.md  pyproject.toml
src/: Rei.py
src/gui/: gui.py
src/osu/: beatmap.py  gameplay.py  goosumemory.py  menu.py
src/utils/: constants.py  logging.py  windows.py
