[project]
name = "Rei"
version = "1.0"
description = "Default template for PDM package"
authors = [
    {name = "xFGhoul", email = "dauntejules9@gmail.com"},
]
dependencies = [
    "loguru>=0.7.2",
    "asyncio>=3.4.3",
    "rich>=13.7.1",
    "pypresence>=4.3.0",
    "customtkinter>=5.2.2",
    "psutil>=5.9.8",
    "humanize>=4.9.0",
    "pywin32>=306",
    "websockets>=12.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
